.k8s/feedApi.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-feed-api
spec:
  selector:
    matchLabels:
      app: udagram-feed-api
  template:
    metadata:
      labels:
        app: udagram-feed-api
    spec:
      containers:
      - name: udagram-feed-api
        image: sukhrajklair/udagram-feed-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
