.k8s/frontEnd.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-front-end
spec:
  selector:
    matchLabels:
      app: udagram-front-end
  template:
    metadata:
      labels:
        app: udagram-front-end
    spec:
      containers:
      - name: udagram-front-end
        image: sukhrajklair/udagram-front-end:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
