.k8s/userApi.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-user-api
spec:
  selector:
    matchLabels:
      app: udagram-user-api
  template:
    metadata:
      labels:
        app: udagram-user-api
    spec:
      containers:
      - name: udagram-user-api
        image: sukhrajklair/udagram-user-api:latest
        imagePullPolicy: Always
        resources:
          requests:
              memory: "128Mi"
              cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
