.k8s/feedApi.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-feed-api-svc 
  labels:
    svc: udagram-feed-api
spec:
  selector:
    app: udagram-feed-api
  ports:
  - port: 8080
    targetPort: 8080
