.k8s/frontEnd.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-front-end-svc 
  labels:
    svc: udagram-front-end
spec:
  type: NodePort
  selector:
    app: udagram-front-end
  ports:
  - port: 80
    targetPort: 80
