.k8s/userApi.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-userapi-svc 
  labels:
    svc: udagram-user-api
spec:
  selector:
    app: udagram-user-api
  ports:
  - port: 8080
    targetPort: 8080
